--- a/render.yaml
+++ b/render.yaml
@@ -1,9 +1,9 @@
-services:
-  - type: web
-    name: streamlit-app
-    env: python
-    repo: https://github.com/<akarshvante>/<DOC_QA_System>
-    # branch: master
-    buildCommand: pip install -r requirements.txt
-    startCommand: streamlit run app.py --server.port $PORT --server.address 0.0.0.0
-    plan: free
+# services:
+#   - type: web
+#     name: streamlit-app
+#     env: python
+#     repo: https://github.com/<akarshvante>/<DOC_QA_System>
+#     # branch: master
+#     buildCommand: pip install -r requirements.txt
+#     startCommand: streamlit run app.py --server.port $PORT --server.address 0.0.0.0
+#     plan: free
