--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-streamlit>=1.20.0
-PyPDF2>=3.0.0
-sentence-transformers>=2.2.0
-transformers>=4.30.0
-torch>=1.13.0
-hnswlib==0.7.0
-langchain>=0.3.0
-langchain-google-genai>=2.0.0
+streamlit
+PyPDF2
+langchain
+langchain-google-genai
+google-generativeai
+langchain-community
+faiss-cpu
+python-dotenv
+sentence-transformers
