--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,13 @@
 streamlit
 PyPDF2
-langchain
+langchain>=0.3.0
 langchain-core
 langchain-google-genai
 langchain-text-splitters
 langchain-community
 google-generativeai
 faiss-cpu
-python-dotenv
 sentence-transformers
 tiktoken
+python-dotenv
+
