--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
+langchain-huggingface
 streamlit
-PyPDF2
-langchain 
+google-generativeai
+langchain
+langchain-community
 langchain-core
 langchain-google-genai
 langchain-text-splitters
-langchain-community
-google-generativeai
 faiss-cpu
 sentence-transformers
-tiktoken
 python-dotenv
-langchain-huggingface
+pypdf2
+tiktoken
