--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ pypdf2
 faiss-cpu
 sentence-transformers
 tiktoken
-# Force newer versions to ensure Pydantic v2 compatibility
+# Force compatible versions
 langchain>=0.3.0
 langchain-core>=0.3.0
 langchain-community>=0.3.0
